src/ui/snapshots/macaudit__ui__render_tests__golden_app_storage_table_with_detail.snap
---
source: src/ui/render_tests.rs
assertion_line: 195
expression: "render(&mut app, 160, 44)"
---
" 1  Health        8      │┌ App Storage · 9 ───────────────────────────────────────────────────────────────────┐│ Detail                                        "
" 2  Apps          8      ││   Owner          Kind            Excl↓     Shared      Reach Path                  ││Claude                                         "
" 3  Brew         18      ││   Claude         App         16.49 GiB        0 B  16.49 GiB /Applicati…/Claude.app││                                               "
" 4  Tools        10      ││   Google Chrome  App          6.39 GiB        0 B   6.39 GiB /Applicati… Chrome.app││Path                /Applications/Claude.app   "
" 5  Disk         11   13G││   Visual Studio… App          3.59 GiB        0 B   3.59 GiB /Applicati…io Code.app││Size                16.49 GiB                  "
" 6  Projects      7      ││   Homebrew       Homebrew        3 GiB        0 B      3 GiB /opt/homebrew         ││Severity            info                       "
"▸7  App space     9      ││   pnpm           Tool          200 MiB        0 B    200 MiB ~/Library/pnpm        ││                                               "
" 8  Daemons       7      ││   node           Formula       150 MiB        0 B    150 MiB /opt/homeb…Cellar/node││Details                                        "
" 9  Shell         9      ││   Baseline                                                                         ││Exclusive                                      "
" 0  Runtimes      7  1.2G││   Coverage                                                                         ││  16.49 GiB — only this owner touches it       "
"    Docker        6  4.3G││   Unattributed                                                                     ││Shared                                         "
"    Ports         6      ││                                                                                    ││  0 B — this owner's slice of paths more than  "
"    Git           7      ││                                                                                    ││one owner touches                              "
"    Simulators    6  7.5G││                                                                                    ││Reach                                          "
"    iOS          11      ││                                                                                    ││  16.49 GiB — everything this owner touches,   "
"    Keys          6      ││                                                                                    ││shared and baseline included                   "
"    TimeMach     12      ││                                                                                    ││Baseline share                                 "
"                         ││                                                                                    ││  0 B — this owner's slice of ecosystem-wide   "
"                         ││                                                                                    ││resources                                      "
"                         ││                                                                                    ││Best evidence       exact                      "
"                         ││                                                                                    ││▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮▮       "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││By kind                                        "
"                         ││                                                                                    ││App support         14 GiB                     "
"                         ││                                                                                    ││Cache               2 GiB                      "
"                         ││                                                                                    ││App bundle          500 MiB                    "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││Top entries                                    "
"                         ││                                                                                    ││14 GiB  name match  Application Support/Claude "
"                         ││                                                                                    ││  ↳                 CFBundleName match         "
"                         ││                                                                                    ││2 GiB  exact                                   "
"                         ││                                                                                    ││  Caches/com.anthropic.claudefordesktop        "
"                         ││                                                                                    ││  ↳                 bundle id                  "
"                         ││                                                                                    ││500 MiB  exact      Claude.app                 "
"                         ││                                                                                    ││  ↳                 bundle id                  "
"                         ││                                                                                    ││Owner kind          App                        "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         │└────────────────────────────────────────────────────────────────────────────────────┘│                                               "
"                         │ ␣:mark  ⏎:open  z:fold  x:exec  r:rescan  o:root  S:stop  ?:help  q:quit  /:filter  s:sort:Excl↓  p:detail         Selected: 0 · 0 B "
