src/ui/snapshots/macaudit__ui__render_tests__golden_apps_tree.snap
---
source: src/ui/render_tests.rs
assertion_line: 120
expression: "render(&mut app, 150, 44)"
---
" 1  Health        8      │┌ Apps · 8 ─────────────────────────────────────────────────────────────────────┐│ Detail                                   "
"▸2  Apps          8      ││   Name↑                     Version      Source     Arch      Path            ││Xcode 15.3                                "
" 3  Brew         18      ││▾  App Store  (1)                                                              ││app_store — mac_app_store                 "
" 4  Tools        10      ││     Xcode 15.3              15.3         App Store  universal /Applic…code.app││                                          "
" 5  Disk         11   13G││▾  Homebrew Cask  (2)                                                          ││Path           /Applications/Xcode.app    "
" 6  Projects      7      ││     Docker 4.29.0           4.29.0       cask       universal /Applic…cker.app││Severity       info                       "
" 7  App space     9      ││     Slack 4.36.0            4.36.0       cask       universal /Applic…lack.app││                                          "
" 8  Daemons       7      ││▾  Unmanaged (Applications)…                                                   ││Details                                   "
" 9  Shell         9      ││     iTerm 3.4.20  ⚠ cask: … 3.4.20       unmanaged  universal /Applic…Term.app││Bundle id      com.apple.dt.Xcode         "
" 0  Runtimes      7  1.2G││     LegacyPhotoEditor 1.0   1.0          unmanaged  intel     /Applic…itor.app││Version        15.3                       "
"    Docker        6  4.3G││▾  Unmanaged (helpers & oth…                                                   ││Source         app_store                  "
"    Ports         6      ││     VendorHelper 2.1        2.1          unmanaged  universal /Librar…lper.app││Group          App Store                  "
"    Git           7      ││▾  User  (1)                                                                   ││Obtained from  mac_app_store              "
"    Simulators    6  7.5G││     Keynote 13.3            13.3         user       universal /Applic…note.app││Signed by                                 "
"    iOS          11      ││                                                                               ││  Apple Mac OS Application Signing        "
"    Keys          6      ││                                                                               ││Architecture   universal                  "
"    TimeMach     12      ││                                                                               ││                                          "
"                         ││                                                                               ││Remedies                                  "
"                         ││                                                                               ││▶ 1. Reveal in Finder                     "
"                         ││                                                                               ││  $ open -R /Applications/Xcode.app       "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         ││                                                                               ││                                          "
"                         │└───────────────────────────────────────────────────────────────────────────────┘│                                          "
"                         │ ␣:mark  ⏎:open  z:fold  x:exec  r:rescan  o:root  S:stop  ?:help  q:quit  /:filter  s:sort:Name↑         Selected: 0 · 0 B "
