src/ui/snapshots/macaudit__ui__render_tests__golden_brew_explorer_reverse.snap
---
source: src/ui/render_tests.rs
assertion_line: 270
expression: "render(&mut app, 160, 44)"
---
" 1  Health        8      │┌ Brew · 18 · needed by (d: needs) ──────────────────────────────────────────────────┐│ Detail                                        "
" 2  Apps          8      ││   Name↑                               Version        Status                 Used by││python@3.14                                    "
"▸3  Brew         18      ││▾  Autoremove candidates  (2)                                                       ││requested — 3.14.7 · Interpreted, interactive, "
" 4  Tools        10      ││     Homebrew autoremove candidates                   summary                       ││object-oriented programming language           "
" 5  Disk         11   13G││       libevent                        2.1.13         autoremove                    ││                                               "
" 6  Projects      7      ││▾  Explicitly installed  (7)                                                        ││Path                                           "
" 7  App space     9      ││       jq                              1.7.1          requested · leaf              ││  /opt/homebrew/Cellar/python@3.14             "
" 8  Daemons       7      ││       pgcli                           4.3.0          requested · leaf              ││Severity            info                       "
" 9  Shell         9      ││       pre-commit                      4.3.0          requested · leaf              ││Source                                         "
" 0  Runtimes      7  1.2G││     ▸ python@3.14                     3.14.7         requested                    3││  brew info --json=v2 --installed (install     "
"    Docker        6  4.3G││       ripgrep                         14.1.0         requested · leaf              ││receipt runtime_dependencies); brew autoremove "
"    Ports         6      ││       wget                            1.21.4         outdated → 1.24.5             ││--dry-run                                      "
"    Git           7      ││       yt-dlp                          2026.09.01     requested · leaf              ││                                               "
"    Simulators    6  7.5G││▾  Installed as dependency  (5)                                                     ││Details                                        "
"    iOS          11      ││     ▸ libidn2                         2.3.7          dependency                   1││Installed           3.14.7                     "
"    Keys          6      ││     ▸ libunistring                    1.2            dependency                   1││Origin                                         "
"    TimeMach     12      ││     ▸ oniguruma                       6.9.9          dependency                   1││  explicitly installed (installed_on_request)  "
"                         ││     ▾ openssl@3                       3.6.3          dependency                   2││Leaf (nothing depends on it)  no               "
"                         ││       ▸ python@3.14  (direct)         3.14.7         requested                    3││Autoremove          no                         "
"                         ││         wget  (direct)                1.21.4         outdated → 1.24.5             ││Dependency data     installed_runtime          "
"                         ││     ▸ pcre2                           10.43          dependency                   1││Needs               openssl@3, sqlite, xz      "
"                         ││▾  Unknown origin  (1)                                                              ││Needs (transitive)  ca-certificates            "
"                         ││       oldlib                          0.1            origin? · leaf                ││Needed by           pgcli, pre-commit, yt-dlp  "
"                         ││▾  Casks  (3)                                                                       ││Kept because of     pgcli, pre-commit, yt-dlp  "
"                         ││       docker                          4.29.0         cask                          ││If removed                                     "
"                         ││       pdftk-java                      3.3.3          cask                          ││Blocked by          pgcli, pre-commit, yt-dlp  "
"                         ││       visual-studio-code              1.89.1         cask                          ││Description                                    "
"                         ││                                                                                    ││  Interpreted, interactive, object-oriented    "
"                         ││                                                                                    ││programming language                           "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         │└────────────────────────────────────────────────────────────────────────────────────┘│                                               "
"                         │ ␣:mark  ⏎:open  z:fold  x:exec  r:rescan  o:root  S:stop  ?:help  q:quit  /:filter  s:sort:Name↑  p:detail         Selected: 0 · 0 B "
