src/ui/snapshots/macaudit__ui__render_tests__golden_browse_descend.snap
---
source: src/ui/render_tests.rs
expression: "render(&mut app, 160, 44)"
---
" 1  Health        8      │┌ ~/Pictures · 63.39 GiB · 148,000 files ────────────────────────────────────────────┐│ Detail                                        "
"▸2  Apps          8      ││   Name                        Size       Share                         Files   Dirs││Photos Library.photoslibrary                   "
" 3  Brew         18      ││     Photos Library.photoslib…  63.39 GiB 100% ████████████████████   148,000      0││                                               "
" 4  Tools        10      ││                                                                                    ││Allocated      63.39 GiB                       "
" 5  Disk         11   13G││                                                                                    ││Apparent       63.39 GiB                       "
" 6  Projects      7      ││                                                                                    ││Files          148,000                         "
" 7  App space     9      ││                                                                                    ││Folders        0                               "
" 8  Daemons       7      ││                                                                                    ││Unreadable     0                               "
" 9  Shell         9      ││                                                                                    ││                                               "
" 0  Runtimes      7  1.2G││                                                                                    ││Large files · scan summary                     "
"    Docker        6  4.3G││                                                                                    ││Up to 3 retained entries; not an exact folder  "
"    Ports         6      ││                                                                                    ││ranking                                        "
"    Git           7      ││                                                                                    ││Scan coverage  complete snapshot               "
"    Simulators    6  7.5G││                                                                                    ││No entries retained for this folder; it may    "
"    iOS          11      ││                                                                                    ││still contain files                            "
"    Keys          6      ││                                                                                    ││                                               "
"    TimeMach     12      ││                                                                                    ││Findings here                                  "
"                         ││                                                                                    ││Count          1                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         │└────────────────────────────────────────────────────────────────────────────────────┘│                                               "
"                         │ ⏎:open  ⌫:up  s:sort:size  p:detail  b:back  ?:help                                                                Selected: 0 · 0 B "
