src/ui/snapshots/macaudit__ui__render_tests__golden_browse_root.snap
---
source: src/ui/render_tests.rs
expression: "render(&mut app, 160, 44)"
---
" 1  Health        8      │┌ /Users/dev · 178.27 GiB · 505,152 files ───────────────────────────────────────────┐│ Detail                                        "
"▸2  Apps          8      ││   Name                        Size       Share                         Files   Dirs││Pictures                                       "
" 3  Brew         18      ││   ▸ Pictures                   63.39 GiB  36% ███████░░░░░░░░░░░░░   148,000      1││                                               "
" 4  Tools        10      ││   ▸ dev                        45.05 GiB  25% █████░░░░░░░░░░░░░░░    81,806     11││Allocated      63.39 GiB                       "
" 5  Disk         11   13G││   ▸ Library                    32.52 GiB  18% ████░░░░░░░░░░░░░░░░   273,440     13││Apparent       63.39 GiB                       "
" 6  Projects      7      ││     Movies                     23.29 GiB  13% ███░░░░░░░░░░░░░░░░░         2      0││Files          148,000                         "
" 7  App space     9      ││     Downloads                  11.88 GiB   7% █░░░░░░░░░░░░░░░░░░░         2      0││Folders        1                               "
" 8  Daemons       7      ││   ▸ Documents                   2.14 GiB   1% ░░░░░░░░░░░░░░░░░░░░     1,901      1││Unreadable     0                               "
" 9  Shell         9      ││                                                                                    ││                                               "
" 0  Runtimes      7  1.2G││                                                                                    ││Large files · scan summary                     "
"    Docker        6  4.3G││                                                                                    ││Up to 3 retained entries; not an exact folder  "
"    Ports         6      ││                                                                                    ││ranking                                        "
"    Git           7      ││                                                                                    ││Scan coverage  complete snapshot               "
"    Simulators    6  7.5G││                                                                                    ││No entries retained for this folder; it may    "
"    iOS          11      ││                                                                                    ││still contain files                            "
"    Keys          6      ││                                                                                    ││                                               "
"    TimeMach     12      ││                                                                                    ││Findings here                                  "
"                         ││                                                                                    ││Count          1                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         ││                                                                                    ││                                               "
"                         │└────────────────────────────────────────────────────────────────────────────────────┘│                                               "
"                         │ ⏎:open  ⌫:up  s:sort:size  p:detail  b:back  ?:help                                                                Selected: 0 · 0 B "
